HISTORY OF LGCK BUILDER

*** 0.6.0.7

- EDITOR: builder can export sprites (obl, png)
- EDITOR: runtime integration the IDE
- EASYDOC: introducted the concept of alias amd inprove the ui


*** 0.6.0.6

- ENGINE: replaced scene list w/ ptr 
- ENGINE: new events: Level.onHandler, Level.onGoalKilled
- ENGINE: added borderColor, introBkColor, introTextColor
- ENGINE: added experimental barebone runtimes (opengl, SDL, SFML)
- ENGINE: new game events: onPickup(), onSaveGame(), onLoadGame()
- ENGINE: new game events: onRestartLevel(), onNotifyClosure()
- ENGINE: new sprite event: EO_NOTIFYCLOSURE
- ENGINE: new level event: EL_NOTIFYCLOSURE
- ENGINE: custom scrolling layers (see layer_setOffset)
- ENGINE: tied EL_RESTART event with snapshot_reload
- ENGINE: replaced FTGL w/ lgck's own font rendering code
- ENGINE: added colorMod (primary light source)
- EDITOR: added scriptWizard
- EDITOR: autoupdater to check for new versions
- EDITOR: edit raw path (sprite)
- EDITOR: GUI to resize font size in the editor pane
- EDITOR: SpriteWiz waypoint added
- EDITOR: added Edit Images pop-menu item for sprites
- EDITOR: testLevel nows allows to play a full game
- LUA: updateJoyState()
- LUA: callGameEvent(), sprite_unmarkAsGoal()
- LUA: sprite:get(), sprite_set()
- LUA: sprite:get()/set() can access EXTRA_XXXX values directly
- LUA: sprite:hitTest()
- LUA: display_sizeText(), Display:sizeText()
- LUA: ss_drawText(), ss_paint(), ss_paintImage(), ss_clear()
- LUA: Counters:inc(), Counters:dec(), Counters:add()
- LUA: warpTo(), strv_get(), strv_set(), strv_del()
- LUA: snapshot_take(), snapshot_reload()
- LUA: layer_setOffsetX(), layer_setOffsetY()
- LUA: SHL(), SHR(), ss_notifyClosure()
- BUG FIX: When more than 10 Displays active, only the last one is displayed
- BUG FIX: random crash when sprite is added to main layer

*** 0.6.0.5

- ENGINE: customs strings for each sprite instance
- EDITOR: migrated to qt5
- EDITOR: GUI to change default frame per sprite